<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_connect" android:title="@string/txt_acao_menu_conectar"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_disconnect" android:title="@string/txt_acao_desconectar"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_bluetooth" android:title="@string/txt_acao_menu_lista_dispositivos"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/configuracoes" android:title="@string/action_configuracoes"></item>
    <item android:id="@+id/historico" android:title="@string/title_activity_historico"></item>-->
</menu>
